--- a/local/test2.html
+++ b/local/test2.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HomeRepairs4U | Built Properly. Priced Fairly. Done Right.</title>
 <meta name="description" content="Trusted local specialists in fencing, roofing & property repairs. Fully insured. Free written quotes. Built properly and priced fairly.">
-<link rel="canonical" href="https://homerepairs4u.com/local/test2.html">
+<link rel="canonical" href="https://homerepairs4u.com/">
 
 <style>
 :root{
@@ -74,14 +74,14 @@ display:flex;
 align-items:center;
 justify-content:center;
 text-align:center;
-background: #000;
-  color:white;
+color:white;
+background:url('images/work-in-progress.jpg') center/cover no-repeat;
 overflow:hidden;
 }
 .hero-overlay{
 position:absolute;
 inset:0;
-background:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.3));
+background:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.8));
 z-index:1;
 }
 .hero-content{
@@ -334,13 +334,13 @@ text-align:center;
 <section class="hero">
 <div class="hero-overlay"></div>
 <div class="container hero-content">
-<h1 class="fade">External Maintenance. Priced Fairly. Done Right.</h1>
-<p class="fade">Exterior Decorating, Pressure Washing, Gutter Services, Fence Erectors, Ivy Removal.</p>
+<h1 class="fade">Built Properly. Priced Fairly. Done Right.</h1>
+<p class="fade">Trusted local specialists in fencing, roofing & property repairs.</p>
 <a href="https://homerepairs4u.com/local/test2.html" class="btn fade">Get Your Free Quote</a>
 <div class="trust-row fade">
 <span>✔ Fully Insured</span>
-<span>✔ Instant Online Quotes</span>
-<span>✔ 32+ Years Experience</span>
+<span>✔ Free Written Quotes</span>
+<span>✔ 10+ Years Experience</span>
 <span>✔ Local & Reliable</span>
 </div>
 </div>
@@ -348,10 +348,10 @@ text-align:center;
 
 <section class="stats fade">
 <div class="container stats-grid">
-<div><h3>Over 3400+</h3><p>Projects Completed</p></div>
-<div><h3>Over 32</h3><p>Years Experience</p></div>
-<div><h3>Instant</h3><p>Online Quotes For Any Project</p></div>
-<div><h3>5★</h3><p>Local Service</p></div>
+<div><h3>300+</h3><p>Projects Completed</p></div>
+<div><h3>10+</h3><p>Years Experience</p></div>
+<div><h3>100%</h3><p>Free Written Quotes</p></div>
+<div><h3>5★</h3><p>Rated Local Service</p></div>
 </div>
 </section>
 
@@ -364,7 +364,7 @@ text-align:center;
 <!-- Card 1 -->
 <div class="card fade">
 <img class="fade-child" src="images/fence.jpg" alt="Fencing work">
-<h3 class="fade-child">Fence Installation</h3>
+<h3 class="fade-child">Fencing Installation</h3>
 <p class="fade-child">Secure and long-lasting fencing installed professionally.</p>
 <a href="https://homerepairs4u.com/local/fencing.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
@@ -378,8 +378,8 @@ text-align:center;
 <!-- Card 2 -->
 <div class="card fade">
 <img class="fade-child" src="images/roof.jpg" alt="Roof Repairs">
-<h3 class="fade-child">Roof Cleaning</h3>
-<p class="fade-child">No pressure washing damage just solid cleaning and chemical treatmemt.</p>
+<h3 class="fade-child">Roof Repairs</h3>
+<p class="fade-child">Reliable roof repairs to prevent leaks and damage.</p>
 <a href="https://homerepairs4u.com/local/roof-repairs.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
 <button class="read-more-btn">Read More ▼</button>
@@ -392,7 +392,7 @@ text-align:center;
 <!-- Card 3 -->
 <div class="card fade">
 <img class="fade-child" src="images/property.jpg" alt="Property Improvements">
-<h3 class="fade-child">Exterior Painting and Restoration.</h3>
+<h3 class="fade-child">Property Improvements</h3>
 <p class="fade-child">Enhance your property’s value and functionality.</p>
 <a href="https://homerepairs4u.com/local/property-improvements.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
@@ -406,7 +406,7 @@ text-align:center;
 <!-- Card 4 -->
 <div class="card fade">
 <img class="fade-child" src="images/general.jpg" alt="General Repairs">
-<h3 class="fade-child">Pressure Washing</h3>
+<h3 class="fade-child">General Repairs</h3>
 <p class="fade-child">Fixing issues across your property efficiently.</p>
 <a href="https://homerepairs4u.com/local/general-repairs.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
@@ -418,9 +418,9 @@ text-align:center;
 </div>
 
 <!-- Card 5 -->
-<div class="Ivy Removal">
+<div class="card fade">
 <img class="fade-child" src="images/gate.jpg" alt="Gate Installation">
-<h3 class="fade-child">Gutter Services</h3>
+<h3 class="fade-child">Gate Installation</h3>
 <p class="fade-child">Secure and stylish gate solutions for your property.</p>
 <a href="https://homerepairs4u.com/local/gate-installation.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
@@ -434,7 +434,7 @@ text-align:center;
 <!-- Card 6 -->
 <div class="card fade">
 <img class="fade-child" src="images/flatroof.jpg" alt="Flat Roof Repairs">
-<h3 class="fade-child">Ivy Removal</h3>
+<h3 class="fade-child">Flat Roof Repairs</h3>
 <p class="fade-child">Expert repair services for flat roofs.</p>
 <a href="https://homerepairs4u.com/local/flat-roof.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
@@ -476,7 +476,7 @@ text-align:center;
 <!-- Card 9 -->
 <div class="card fade">
 <img class="fade-child" src="images/emergency.jpg" alt="Emergency Repairs">
-<h3 class="fade-child">General Outdoor Repairs</h3>
+<h3 class="fade-child">Emergency Repairs</h3>
 <p class="fade-child">Fast response for urgent property issues.</p>
 <a href="https://homerepairs4u.com/local/emergency-repairs.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
@@ -486,7 +486,7 @@ text-align:center;
 </div>
 </div>
 </div>
-  
+
 </div>
 </div>
 </section>
