--- a/local/test2.html
+++ b/local/test2.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HomeRepairs4U | Built Properly. Priced Fairly. Done Right.</title>
 <meta name="description" content="Trusted local specialists in fencing, roofing & property repairs. Fully insured. Free written quotes. Built properly and priced fairly.">
-<link rel="canonical" href="https://homerepairs4u.com/">
+<link rel="canonical" href="https://homerepairs4u.com/local/test2.html">
 
 <style>
 :root{
@@ -367,12 +367,6 @@ text-align:center;
 <h3 class="fade-child">Fencing Installation</h3>
 <p class="fade-child">Secure and long-lasting fencing installed professionally.</p>
 <a href="https://homerepairs4u.com/local/fencing.html" class="card-btn fade-child">Get Quote</a>
-<div class="read-more fade-child">
-<button class="read-more-btn">Read More ▼</button>
-<div class="read-more-content">
-<p>We specialize in installing all types of fencing: wooden, metal, and composite, tailored to your property needs.</p>
-</div>
-</div>
 </div>
 
 <!-- Card 2 -->
@@ -381,12 +375,6 @@ text-align:center;
 <h3 class="fade-child">Roof Repairs</h3>
 <p class="fade-child">Reliable roof repairs to prevent leaks and damage.</p>
 <a href="https://homerepairs4u.com/local/roof-repairs.html" class="card-btn fade-child">Get Quote</a>
-<div class="read-more fade-child">
-<button class="read-more-btn">Read More ▼</button>
-<div class="read-more-content">
-<p>We fix all types of roofs including flat, tiled, and slate roofs, ensuring your home stays protected.</p>
-</div>
-</div>
 </div>
 
 <!-- Card 3 -->
@@ -395,12 +383,6 @@ text-align:center;
 <h3 class="fade-child">Property Improvements</h3>
 <p class="fade-child">Enhance your property’s value and functionality.</p>
 <a href="https://homerepairs4u.com/local/property-improvements.html" class="card-btn fade-child">Get Quote</a>
-<div class="read-more fade-child">
-<button class="read-more-btn">Read More ▼</button>
-<div class="read-more-content">
-<p>From extensions to interior upgrades, we deliver high-quality improvements to meet your requirements.</p>
-</div>
-</div>
 </div>
 
 <!-- Card 4 -->
@@ -409,12 +391,6 @@ text-align:center;
 <h3 class="fade-child">General Repairs</h3>
 <p class="fade-child">Fixing issues across your property efficiently.</p>
 <a href="https://homerepairs4u.com/local/general-repairs.html" class="card-btn fade-child">Get Quote</a>
-<div class="read-more fade-child">
-<button class="read-more-btn">Read More ▼</button>
-<div class="read-more-content">
-<p>Our team handles a wide range of general maintenance and repair tasks to keep your property in top condition.</p>
-</div>
-</div>
 </div>
 
 <!-- Card 5 -->
@@ -424,11 +400,6 @@ text-align:center;
 <p class="fade-child">Secure and stylish gate solutions for your property.</p>
 <a href="https://homerepairs4u.com/local/gate-installation.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
-<button class="read-more-btn">Read More ▼</button>
-<div class="read-more-content">
-<p>We install both automated and manual gates, customized to match your property’s aesthetics.</p>
-</div>
-</div>
 </div>
 
 <!-- Card 6 -->
@@ -437,12 +408,6 @@ text-align:center;
 <h3 class="fade-child">Flat Roof Repairs</h3>
 <p class="fade-child">Expert repair services for flat roofs.</p>
 <a href="https://homerepairs4u.com/local/flat-roof.html" class="card-btn fade-child">Get Quote</a>
-<div class="read-more fade-child">
-<button class="read-more-btn">Read More ▼</button>
-<div class="read-more-content">
-<p>We identify leaks and structural issues, restoring flat roofs to ensure long-lasting protection.</p>
-</div>
-</div>
 </div>
 
 <!-- Card 7 -->
@@ -451,12 +416,6 @@ text-align:center;
 <h3 class="fade-child">Sheds & Outbuildings</h3>
 <p class="fade-child">Build or repair sheds, garages, and other structures.</p>
 <a href="https://homerepairs4u.com/local/sheds-outbuildings.html" class="card-btn fade-child">Get Quote</a>
-<div class="read-more fade-child">
-<button class="read-more-btn">Read More ▼</button>
-<div class="read-more-content">
-<p>Our team handles construction and maintenance of sheds, garages, and other outbuildings efficiently.</p>
-</div>
-</div>
 </div>
 
 <!-- Card 8 -->
@@ -465,12 +424,6 @@ text-align:center;
 <h3 class="fade-child">Decking & Timber</h3>
 <p class="fade-child">Install or repair timber decks and outdoor features.</p>
 <a href="https://homerepairs4u.com/local/decking-timber.html" class="card-btn fade-child">Get Quote</a>
-<div class="read-more fade-child">
-<button class="read-more-btn">Read More ▼</button>
-<div class="read-more-content">
-<p>We craft and repair decking, pergolas, and other timber structures using quality materials.</p>
-</div>
-</div>
 </div>
 
 <!-- Card 9 -->
@@ -479,12 +432,6 @@ text-align:center;
 <h3 class="fade-child">Emergency Repairs</h3>
 <p class="fade-child">Fast response for urgent property issues.</p>
 <a href="https://homerepairs4u.com/local/emergency-repairs.html" class="card-btn fade-child">Get Quote</a>
-<div class="read-more fade-child">
-<button class="read-more-btn">Read More ▼</button>
-<div class="read-more-content">
-<p>Our emergency repair team is available to address urgent problems, minimizing damage and downtime.</p>
-</div>
-</div>
 </div>
 
 </div>
