--- a/local/test2.html
+++ b/local/test2.html
@@ -340,7 +340,7 @@ text-align:center;
 <!-- 9 Service Cards -->
 <!-- Card 1 -->
 <div class="card fade">
-<img class="fade-child" src="images/fence.jpg" alt="Fencing work">
+<img class="fade-child" src="/images/fence-panels.webp" alt="Strong structured fencing work Doncaster">
 <h3 class="fade-child">Fencing Installation</h3>
 <p class="fade-child">Secure and long-lasting fencing installed professionally.</p>
 <a href="https://homerepairs4u.com/local/fencing.html" class="card-btn fade-child">Get Quote</a>
