--- a/local/test2.html
+++ b/local/test2.html
@@ -340,10 +340,11 @@ text-align:center;
 <!-- 9 Service Cards -->
 <!-- Card 1 -->
 <div class="card fade">
-<img class="fade-child" src="/images/fence-panels.webp" alt="Strong structured fencing work Doncaster">
-<h3 class="fade-child">Fencing Installation</h3>
-<p class="fade-child">Secure and long-lasting fencing installed professionally.</p>
-<a href="https://homerepairs4u.com/local/fencing.html" class="card-btn fade-child">Get Quote</a>
+<img class="fade-child" src="/images/fence-panels.webp" alt="Strong structured fencing work that lasts, Doncaster">
+<h3 class="fade-child">Fencing Strong Straight Built to Last Done Right!</h3>
+<p class="fade-child">Solid, level fencing installed properly from the ground up. No rushed jobs, no weak posts - just strong, secure boudaries that last!</p>
+<p class="fade-child">View our fencing service page</p>  
+<a href="https://homerepairs4u.com/local/fencing.html" class="card-btn fade-child">View Page</a>
 </div>
 
 <!-- Card 2 -->
