--- a/local/test2.html
+++ b/local/test2.html
@@ -344,15 +344,16 @@ text-align:center;
 <h3 class="fade-child">Fencing Strong Straight Built to Last Done Right!</h3>
 <p class="fade-child">Solid, level fencing installed properly from the ground up. No rushed jobs, no weak posts - just strong, secure boudaries that last!</p>
 <p class="fade-child">View our fencing service page</p>  
-<a href="https://homerepairs4u.com/local/fencing.html" class="card-btn fade-child">View Page</a>
+<a href="https://homerepairs4u.com/local/fencing.html" class="card-btn fade-child">Fencing Services</a>
 </div>
 
 <!-- Card 2 -->
 <div class="card fade">
-<img class="fade-child" src="images/roof.jpg" alt="Roof Repairs">
-<h3 class="fade-child">Roof Repairs</h3>
-<p class="fade-child">Reliable roof repairs to prevent leaks and damage.</p>
-<a href="https://homerepairs4u.com/local/roof-repairs.html" class="card-btn fade-child">Get Quote</a>
+<img class="fade-child" src="/images/roof-clean.webp" alt="Roof Cleaning without damaging your tiles, no pressure wash, Doncaster">
+<h3 class="fade-child">Roof Cleaning Done Proper</h3>
+<p class="fade-child">We remove moss, lichen, and dirt the right way - first craping away build-up, then applying a safe chemical treatment to protect from regrowth without destrying your roof tiles!.</p>
+<p class="fade-child">View our roof cleaning page.</p>
+  <a href="https://homerepairs4u.com/local/roof-repairs.html" class="card-btn fade-child">Roof Cleaning</a>
 </div>
 
 <!-- Card 3 -->
