--- a/local/test2.html
+++ b/local/test2.html
@@ -366,7 +366,7 @@ text-align:center;
 
 <!-- Card 4 -->
 <div class="card fade">
-<img class="fade-child" src="images/general.jpg" alt="General Repairs">
+<img class="fade-child" src="/images/ivy-removal.webp" alt="Ivy completely removed from your property, Doncaster">
 <h3 class="fade-child">General Repairs</h3>
 <p class="fade-child">Fixing issues across your property efficiently.</p>
 <a href="https://homerepairs4u.com/local/general-repairs.html" class="card-btn fade-child">Get Quote</a>
