--- a/local/test2.html
+++ b/local/test2.html
@@ -390,7 +390,7 @@ text-align:center;
 
 <!-- Card 7 -->
 <div class="card fade">
-<img class="fade-child" src="images/sheds.jpg" alt="Sheds & Outbuildings">
+<img class="fade-child" src="/images/windows-boarded.webp" alt="Windows boarded up emergency service, Doncaster">
 <h3 class="fade-child">Sheds & Outbuildings</h3>
 <p class="fade-child">Build or repair sheds, garages, and other structures.</p>
 <a href="https://homerepairs4u.com/local/sheds-outbuildings.html" class="card-btn fade-child">Get Quote</a>
