--- a/local/test2.html
+++ b/local/test2.html
@@ -398,7 +398,7 @@ text-align:center;
 
 <!-- Card 8 -->
 <div class="card fade">
-<img class="fade-child" src="images/decking.jpg" alt="Decking & Timber">
+<img class="fade-child" src="/images/decking.webp" alt="Decking & Timber">
 <h3 class="fade-child">Decking & Timber</h3>
 <p class="fade-child">Install or repair timber decks and outdoor features.</p>
 <a href="https://homerepairs4u.com/local/decking-timber.html" class="card-btn fade-child">Get Quote</a>
