--- a/local/test2.html
+++ b/local/test2.html
@@ -374,7 +374,7 @@ text-align:center;
 
 <!-- Card 5 -->
 <div class="card fade">
-<img class="fade-child" src="/images/gutter-alignment.webp" alt="Gate clearing, cleaning, repairs and replacement - Doncaster">
+<img class="fade-child" src="/images/gutter-service.webp" alt="Gate clearing, cleaning, repairs and replacement - Doncaster">
 <h3 class="fade-child">Gate Installation</h3>
 <p class="fade-child">Secure and stylish gate solutions for your property.</p>
 <a href="https://homerepairs4u.com/local/gate-installation.html" class="card-btn fade-child">Get Quote</a>
