--- a/local/test2.html
+++ b/local/test2.html
@@ -358,7 +358,7 @@ text-align:center;
 
 <!-- Card 3 -->
 <div class="card fade">
-<img class="fade-child" src="/images/house-before-after.webp" alt="Property Improvements Exterior house painted before after, Doncaster">
+<img class="fade-child" src="/images/house-paint.webp" alt="Property Improvements Exterior house painted before after, Doncaster">
 <h3 class="fade-child">Transform Your Homes Exterior</h3>
 <p class="fade-child">We prep, prime, and paint your homes exterior with attention to detail. Every surface protected, every line clean - a finish that looks greatand lasts for years!</p>
 <a href="https://homerepairs4u.com/local/property-improvements.html" class="card-btn fade-child">Get Quote</a>
