--- a/local/test2.html
+++ b/local/test2.html
@@ -342,7 +342,7 @@ text-align:center;
 <div class="card fade">
 <img class="fade-child" src="/images/fence-panels.webp" alt="Strong structured fencing work that lasts, Doncaster">
 <h3 class="fade-child">Fencing Strong Straight Built to Last Done Right!</h3>
-<p class="fade-child">Solid, level fencing installed properly from the ground up. No rushed jobs, no weak posts - just strong, secure boudaries that last!</p>
+<p class="fade-child">Solid, level fencing installed properly from the ground up. No rushed jobs, no weak posts - just strong, secure boundaries that last!</p>
 <p class="fade-child">View our fencing service page</p>  
 <a href="https://homerepairs4u.com/local/fencing.html" class="card-btn fade-child">Fencing Services</a>
 </div>
@@ -350,8 +350,8 @@ text-align:center;
 <!-- Card 2 -->
 <div class="card fade">
 <img class="fade-child" src="/images/roof-clean.webp" alt="Roof Cleaning without damaging your tiles, no pressure wash, Doncaster">
-<h3 class="fade-child">Roof Cleaning Done Proper</h3>
-<p class="fade-child">We remove moss, lichen, and dirt the right way - first craping away build-up, then applying a safe chemical treatment to protect from regrowth without destrying your roof tiles!.</p>
+<h3 class="fade-child">Roof Cleaning Done Properly</h3>
+<p class="fade-child">We remove moss, lichen, and dirt the right way - first scraping away build-up, then applying a safe chemical treatment to protect from regrowth without destroying your roof tiles!</p>
 <p class="fade-child">View our roof cleaning page.</p>
   <a href="https://homerepairs4u.com/local/roof-repairs.html" class="card-btn fade-child">Roof Cleaning</a>
 </div>
@@ -360,7 +360,7 @@ text-align:center;
 <div class="card fade">
 <img class="fade-child" src="/images/house-paint.webp" alt="Property Improvements Exterior house painted before after, Doncaster">
 <h3 class="fade-child">Transform Your Homes Exterior</h3>
-<p class="fade-child">We prep, prime, and paint your homes exterior with attention to detail. Every surface protected, every line clean - a finish that looks greatand lasts for years!</p>
+<p class="fade-child">We prep, prime, and paint your homes exterior with attention to detail. Every surface protected, every line clean - a finish that looks great and lasts for years!</p>
 <a href="https://homerepairs4u.com/local/property-improvements.html" class="card-btn fade-child">Get Quote</a>
 </div>
 
