--- a/local/test2.html
+++ b/local/test2.html
@@ -341,7 +341,7 @@ text-align:center;
 <!-- Card 1 -->
 <div class="card fade">
 <img class="fade-child" src="/images/fence-panels.webp" alt="Strong structured fencing work that lasts, Doncaster">
-<h3 class="fade-child">Fencing Strong Straight Built to Last Done Right!</h3>
+<h3 class="fade-child">Strong Straight Fencing Built to Last!</h3>
 <p class="fade-child">Solid, level fencing installed properly from the ground up. No rushed jobs, no weak posts - just strong, secure boundaries that last!</p>
 <p class="fade-child">View our fencing service page</p>  
 <a href="https://homerepairs4u.com/local/fencing.html" class="card-btn fade-child">Fencing Services</a>
@@ -375,8 +375,8 @@ text-align:center;
 <!-- Card 5 -->
 <div class="card fade">
 <img class="fade-child" src="/images/gutter-service.webp" alt="Gate clearing, cleaning, repairs and replacement - Doncaster">
-<h3 class="fade-child">Gate Installation</h3>
-<p class="fade-child">Secure and stylish gate solutions for your property.</p>
+<h3 class="fade-child">Gutters Cleared, Cleaned, Repaired or Replaced.</h3>
+<p class="fade-child">Blocked or damaged gutters can lead to leaks and damp if left unchecked. We clear, clean, repair, or replace guttering properly, ensuring rainwater flows away from your property as it should. No shortcuts — just reliable guttering done right.</p>
 <a href="https://homerepairs4u.com/local/gate-installation.html" class="card-btn fade-child">Get Quote</a>
 </div>
 
