--- a/local/test2.html
+++ b/local/test2.html
@@ -367,8 +367,8 @@ text-align:center;
 <!-- Card 4 -->
 <div class="card fade">
 <img class="fade-child" src="/images/ivy-removal.webp" alt="Ivy completely removed from your property, Doncaster">
-<h3 class="fade-child">General Repairs</h3>
-<p class="fade-child">Fixing issues across your property efficiently.</p>
+<h3 class="fade-child">Ivy Removal give title and paragraph</h3>
+<p class="fade-child"></p>
 <a href="https://homerepairs4u.com/local/general-repairs.html" class="card-btn fade-child">Get Quote</a>
 </div>
 
@@ -383,15 +383,15 @@ text-align:center;
 <!-- Card 6 -->
 <div class="card fade">
 <img class="fade-child" src="/images/pressure-washing-driveways.webp" alt="Pressure washing driveways, patios, decking, Doncaster">
-<h3 class="fade-child">Flat Roof Repairs</h3>
-<p class="fade-child">Expert repair services for flat roofs.</p>
+<h3 class="fade-child">Pressure Washing give me title paragraph</h3>
+<p class="fade-child"></p>
 <a href="https://homerepairs4u.com/local/flat-roof.html" class="card-btn fade-child">Get Quote</a>
 </div>
 
 <!-- Card 7 -->
 <div class="card fade">
 <img class="fade-child" src="/images/windows-boarded.webp" alt="Windows boarded up emergency service, Doncaster">
-<h3 class="fade-child">Sheds & Outbuildings</h3>
+<h3 class="fade-child">Window boarding up - Give title and paragraph</h3>
 <p class="fade-child">Build or repair sheds, garages, and other structures.</p>
 <a href="https://homerepairs4u.com/local/sheds-outbuildings.html" class="card-btn fade-child">Get Quote</a>
 </div>
@@ -399,14 +399,14 @@ text-align:center;
 <!-- Card 8 -->
 <div class="card fade">
 <img class="fade-child" src="/images/decking.webp" alt="Decking & Timber">
-<h3 class="fade-child">Decking & Timber</h3>
+<h3 class="fade-child">Decking Give title and paragraph</h3>
 <p class="fade-child">Install or repair timber decks and outdoor features.</p>
 <a href="https://homerepairs4u.com/local/decking-timber.html" class="card-btn fade-child">Get Quote</a>
 </div>
 
 <!-- Card 9 -->
 <div class="card fade">
-<h3 class="fade-child">Emergency Repairs</h3>
+<h3 class="fade-child">Closing statement give title and paragraph</h3>
 <p class="fade-child">Fast response for urgent property issues.</p>
 <a href="https://homerepairs4u.com/local/emergency-repairs.html" class="card-btn fade-child">Get Quote</a>
 </div>
