--- a/local/test2.html
+++ b/local/test2.html
@@ -367,8 +367,8 @@ text-align:center;
 <!-- Card 4 -->
 <div class="card fade">
 <img class="fade-child" src="/images/ivy-removal.webp" alt="Ivy completely removed from your property, Doncaster">
-<h3 class="fade-child">Ivy Removal give title and paragraph</h3>
-<p class="fade-child"></p>
+<h3 class="fade-child">Ivy Removed Safely and Permanently</h3>
+<p class="Overgrown ivy can damage brickwork, gutters, and roofing if left unchecked. We remove ivy carefully and thoroughly, preventing further damage while keeping your property clean and protected. No tearing, no mess — just ivy removed the right way."></p>
 <a href="https://homerepairs4u.com/local/general-repairs.html" class="card-btn fade-child">Get Quote</a>
 </div>
 
@@ -383,31 +383,31 @@ text-align:center;
 <!-- Card 6 -->
 <div class="card fade">
 <img class="fade-child" src="/images/pressure-washing-driveways.webp" alt="Pressure washing driveways, patios, decking, Doncaster">
-<h3 class="fade-child">Pressure Washing give me title paragraph</h3>
-<p class="fade-child"></p>
+<h3 class="fade-child">Pressure Washing Remove Moss and Grime.</h3>
+<p class="fade-child">We professionally clean driveways, patios, and paths to remove dirt, algae, and staining. Using the correct pressure for each surface, we restore a clean, safe finish without causing damage. Proper cleaning, long-lasting results.</p>
 <a href="https://homerepairs4u.com/local/flat-roof.html" class="card-btn fade-child">Get Quote</a>
 </div>
 
 <!-- Card 7 -->
 <div class="card fade">
 <img class="fade-child" src="/images/windows-boarded.webp" alt="Windows boarded up emergency service, Doncaster">
-<h3 class="fade-child">Window boarding up - Give title and paragraph</h3>
-<p class="fade-child">Build or repair sheds, garages, and other structures.</p>
+<h3 class="fade-child">Emergency Window Boarding Up.</h3>
+<p class="fade-child">We provide fast, secure window boarding to protect your property after damage or break-ins. Strong materials fitted properly to keep your home or business safe until permanent repairs are carried out.</p>
 <a href="https://homerepairs4u.com/local/sheds-outbuildings.html" class="card-btn fade-child">Get Quote</a>
 </div>
 
 <!-- Card 8 -->
 <div class="card fade">
 <img class="fade-child" src="/images/decking.webp" alt="Decking & Timber">
-<h3 class="fade-child">Decking Give title and paragraph</h3>
-<p class="fade-child">Install or repair timber decks and outdoor features.</p>
+<h3 class="fade-child">Decking Installed and Repaired</h3>
+<p class="fade-child">We install and repair timber decking built to last. From solid foundations to a clean, level finish, every deck is fitted properly for strength, safety, and long-term durability.</p>
 <a href="https://homerepairs4u.com/local/decking-timber.html" class="card-btn fade-child">Get Quote</a>
 </div>
 
 <!-- Card 9 -->
 <div class="card fade">
-<h3 class="fade-child">Closing statement give title and paragraph</h3>
-<p class="fade-child">Fast response for urgent property issues.</p>
+<h3 class="fade-child">Reliable Property Repairs You Can Trust.</h3>
+<p class="fade-child">From small repairs to urgent issues, we take pride in doing every job properly. Fair pricing, honest advice, and work completed to a high standard — that’s the HomeRepairs4U promise.</p>
 <a href="https://homerepairs4u.com/local/emergency-repairs.html" class="card-btn fade-child">Get Quote</a>
 </div>
 
