--- a/local/test2.html
+++ b/local/test2.html
@@ -368,7 +368,7 @@ text-align:center;
 <div class="card fade">
 <img class="fade-child" src="/images/ivy-removal.webp" alt="Ivy completely removed from your property, Doncaster">
 <h3 class="fade-child">Ivy Removed Safely and Permanently</h3>
-<p class=">Overgrown ivy can damage brickwork, gutters, and roofing if left unchecked. We remove ivy carefully and thoroughly, preventing further damage while keeping your property clean and protected. No tearing, no mess — just ivy removed the right way.</p>
+<p class="fade-child">Overgrown ivy can damage brickwork, gutters, and roofing if left unchecked. We remove ivy carefully and thoroughly, preventing further damage while keeping your property clean and protected. No tearing, no mess — just ivy removed the right way.</p>
 <a href="https://homerepairs4u.com/local/general-repairs.html" class="card-btn fade-child">Get Quote</a>
 </div>
 
