--- a/local/test2.html
+++ b/local/test2.html
@@ -452,5 +452,103 @@ menu.classList.toggle('show');
 });
 });
 </script>
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"@id": "https://homerepairs4u.com/#localbusiness",
+"name": "HomeRepairs4U",
+"url": "https://homerepairs4u.com/",
+"telephone": "+447735873694",
+"priceRange": "££",
+"description": "Trusted local specialists in fencing, roofing, guttering and property repairs in Doncaster and surrounding areas. Built properly, priced fairly, done right.",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "GB"
+},
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.6170,
+"longitude": -1.1520
+},
+"areaServed": {
+"@type": "AdministrativeArea",
+"name": "Doncaster"
+},
+"openingHoursSpecification": {
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": [
+"Monday",
+"Tuesday",
+"Wednesday",
+"Thursday",
+"Friday",
+"Saturday",
+"Sunday"
+],
+"opens": "00:00",
+"closes": "23:59"
+},
+"hasOfferCatalog": {
+"@type": "OfferCatalog",
+"name": "Property Repair Services",
+"itemListElement": [
+{
+"@type": "Offer",
+"itemOffered": {
+"@type": "Service",
+"name": "Fencing Installation & Repairs"
+}
+},
+{
+"@type": "Offer",
+"itemOffered": {
+"@type": "Service",
+"name": "Roof Repairs & Roof Cleaning"
+}
+},
+{
+"@type": "Offer",
+"itemOffered": {
+"@type": "Service",
+"name": "Gutter Cleaning, Repairs & Replacement"
+}
+},
+{
+"@type": "Offer",
+"itemOffered": {
+"@type": "Service",
+"name": "Pressure Washing"
+}
+},
+{
+"@type": "Offer",
+"itemOffered": {
+"@type": "Service",
+"name": "Ivy Removal"
+}
+},
+{
+"@type": "Offer",
+"itemOffered": {
+"@type": "Service",
+"name": "Decking & Timber Work"
+}
+},
+{
+"@type": "Offer",
+"itemOffered": {
+"@type": "Service",
+"name": "Emergency Property Repairs"
+}
+}
+]
+}
+}
+</script>
 </body>
 </html>
