--- a/local/test2.html
+++ b/local/test2.html
@@ -458,6 +458,7 @@ menu.classList.toggle('show');
 "@type": "LocalBusiness",
 "@id": "https://homerepairs4u.com/#localbusiness",
 "name": "HomeRepairs4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
 "url": "https://homerepairs4u.com/",
 "telephone": "+447735873694",
 "priceRange": "££",
