--- a/local/test2.html
+++ b/local/test2.html
@@ -75,7 +75,7 @@ align-items:center;
 justify-content:center;
 text-align:center;
 color:white;
-background:url('images/work-in-progress.jpg') center/cover no-repeat;
+background: var(--dark);
 overflow:hidden;
 }
 .hero-overlay{
