--- a/local/test2.html
+++ b/local/test2.html
@@ -325,7 +325,7 @@ text-align:center;
 
 <section class="stats fade">
 <div class="container stats-grid">
-<div><h3>300+</h3><p>Projects Completed</p></div>
+<div><h3>Projects Completed</h3><p>Over 3400</p></div>
 <div><h3>10+</h3><p>Years Experience</p></div>
 <div><h3>100%</h3><p>Free Written Quotes</p></div>
 <div><h3>5★</h3><p>Rated Local Service</p></div>
