--- a/local/test2.html
+++ b/local/test2.html
@@ -325,10 +325,22 @@ text-align:center;
 
 <section class="stats fade">
 <div class="container stats-grid">
-<div><h3>Projects Completed</h3><p>Over 3400</p></div>
-<div><h3>10+</h3><p>Years Experience</p></div>
-<div><h3>100%</h3><p>Free Written Quotes</p></div>
-<div><h3>5★</h3><p>Rated Local Service</p></div>
+<div>
+<p class="stat-number">300+</p>
+<h3>Projects Completed</h3>
+</div>
+<div>
+<p class="stat-number">10+</p>
+<h3>Years Experience</h3>
+</div>
+<div>
+<p class="stat-number">100%</p>
+<h3>Free Written Quotes</h3>
+</div>
+<div>
+<p class="stat-number">5★</p>
+<h3>Rated Local Service</h3>
+</div>
 </div>
 </section>
 
