--- a/local/test2.html
+++ b/local/test2.html
@@ -324,7 +324,9 @@ text-align:center;
 </section>
 
 <section class="stats fade">
-<div class="container stats-grid">
+<div class="container">
+<h2 class="fade">Our Achievements</h2> <!-- new h2 for the stats section -->
+<div class="stats-grid">
 <div>
 <p class="stat-number">300+</p>
 <h3>Projects Completed</h3>
@@ -342,8 +344,8 @@ text-align:center;
 <h3>Rated Local Service</h3>
 </div>
 </div>
+</div>
 </section>
-
 <section class="section">
 <div class="container">
 <h2 class="fade" style="text-align:center;font-size:2.5rem;">Our Services</h2>
