--- a/local/test2.html
+++ b/local/test2.html
@@ -309,6 +309,8 @@ margin-bottom: 30px; /* spacing below heading */
 <div class="container">
 <nav>
 <div class="logo">HomeRepairs4U</div>
+<a href="https://homerepairs4u.com/" class="home-link">Home</a>
+</div>
 <div class="menu-toggle">☰</div>
 <ul class="menu">
 <li><a href="https://homerepairs4u.com/local/fencing.html">Fencing</a></li>
