--- a/local/test2.html
+++ b/local/test2.html
@@ -309,10 +309,9 @@ margin-bottom: 30px; /* spacing below heading */
 <div class="container">
 <nav>
 <div class="logo">HomeRepairs4U</div>
-<a href="https://homerepairs4u.com/" class="home-link">Home</a>
-</div>
 <div class="menu-toggle">☰</div>
 <ul class="menu">
+<li><a href="https://homerepairs4u.com/">Home</a></li>
 <li><a href="https://homerepairs4u.com/local/fencing.html">Fencing</a></li>
 <li><a href="https://homerepairs4u.com/local/roof-repairs.html">Roof Repairs</a></li>
 <li><a href="https://homerepairs4u.com/local/property-improvements.html">Property Improvements</a></li>
