--- a/local/test2.html
+++ b/local/test2.html
@@ -313,14 +313,14 @@ margin-bottom: 30px; /* spacing below heading */
 <ul class="menu">
 <li><a href="https://homerepairs4u.com/">Home</a></li>
 <li><a href="https://homerepairs4u.com/local/fencing.html">Fencing</a></li>
-<li><a href="https://homerepairs4u.com/local/roof-repairs.html">Roof Repairs</a></li>
-<li><a href="https://homerepairs4u.com/local/property-improvements.html">Property Improvements</a></li>
-<li><a href="https://homerepairs4u.com/local/general-repairs.html">General Repairs</a></li>
-<li><a href="https://homerepairs4u.com/local/gate-installation.html">Gate Installation</a></li>
-<li><a href="https://homerepairs4u.com/local/flat-roof.html">Flat Roof Repairs</a></li>
-<li><a href="https://homerepairs4u.com/local/sheds-outbuildings.html">Sheds & Outbuildings</a></li>
-<li><a href="https://homerepairs4u.com/local/decking-timber.html">Decking & Timber</a></li>
-<li><a href="https://homerepairs4u.com/local/emergency-repairs.html">Emergency Repairs</a></li>
+<li><a href="https://homerepairs4u.com/local/roof-cleaning.html">Roof Cleaning</a></li>
+<li><a href="https://homerepairs4u.com/local/exterior-painting.html">Exterior-Painting</a></li>
+<li><a href="https://homerepairs4u.com/local/ivy-control.html">Ivy-Control</a></li>
+<li><a href="https://homerepairs4u.com/local/gutter-services.html">Gutter Services</a></li>
+<li><a href="https://homerepairs4u.com/local/pressure-washing.html">Pressure Washing</a></li>
+<li><a href="https://homerepairs4u.com/local/emergency-window-boarding.html">Window Boarding</a></li>
+<li><a href="https://homerepairs4u.com/local/decking-installed.html">Decking Installed</a></li>
+<li><a href="https://homerepairs4u.com/contact.html">Contact</a></li>
 </ul>
 </nav>
 </div>
@@ -335,7 +335,7 @@ margin-bottom: 30px; /* spacing below heading */
 <div class="trust-row fade">
 <span>✔ Fully Insured</span>
 <span>✔ Free Written Quotes</span>
-<span>✔ 10+ Years Experience</span>
+<span>✔ 29+ Years Experience</span>
 <span>✔ Local & Reliable</span>
 </div>
 </div>
@@ -347,20 +347,20 @@ margin-bottom: 30px; /* spacing below heading */
 
 <div class="stats-grid">
 <div>
-<p class="stat-number">300+</p>
+<p class="stat-number">3400+</p>
 <p class="stat-label">Projects Completed</p>
 </div>
 <div>
-<p class="stat-number">10+</p>
+<p class="stat-number">29+</p>
 <p class="stat-label">Years Experience</p>
 </div>
 <div>
 <p class="stat-number">100%</p>
-<p class="stat-label">Free Written Quotes</p>
+<p class="stat-label">Free Quotes</p>
 </div>
 <div>
 <p class="stat-number">5★</p>
-<p class="stat-label">Rated Local Service</p>
+<p class="stat-label">Local Service</p>
 </div>
 </div>
 </div>
