--- a/local/test2.html
+++ b/local/test2.html
@@ -329,9 +329,9 @@ margin-bottom: 30px; /* spacing below heading */
 <section class="hero">
 <div class="hero-overlay"></div>
 <div class="container hero-content">
-<h1 class="fade">Built Properly. Priced Fairly. Done Right.</h1>
+<h1 class="fade">Maintained Properly. Priced Fairly. Done Right.</h1>
 <p class="fade">Trusted local specialists in fencing, roofing & property repairs.</p>
-<a href="https://homerepairs4u.com/local/test2.html" class="btn fade">Get Your Free Quote</a>
+<a href="tel:07735873694" class="btn fade">Call Now</a>
 <div class="trust-row fade">
 <span>✔ Fully Insured</span>
 <span>✔ Free Written Quotes</span>
