--- a/local/test2.html
+++ b/local/test2.html
@@ -338,8 +338,8 @@ opacity: 0;
 <div class="hero-overlay"></div>
 <div class="container hero-content">
 <h1 class="fade hero-title">
-<span id="action-word">Built</span> Properly. Priced Fairly. Done Right.
-</h1>
+<span id="action-word">Built</span> Properly.</h1>
+<h2 class="fade hero-subtitle">Priced Fairly. Done Right</h2>
 <p class="fade">Trusted local specialists in fencing, roofing & property repairs.</p>
 <a href="tel:07735873694" class="btn fade">Call Now</a>
 <div class="trust-row fade">
