--- a/local/test2.html
+++ b/local/test2.html
@@ -349,6 +349,7 @@ opacity: 0;
 <h1 class="fade hero-title">
 <span id="action-word">Built</span> Properly.</h1>
 <p class="fade">Trusted local specialists in fencing, roofing & property repairs.</p>
+<p class="fade"><strong></strong>Priced Fairly, Done Right.</strong></p>
 <a href="tel:07735873694" class="btn fade">Call Now</a>
 <div class="trust-row fade">
 <span>✔ Fully Insured</span>
