--- a/local/test2.html
+++ b/local/test2.html
@@ -414,7 +414,8 @@ opacity: 0;
 <img class="fade-child" src="/images/house-paint.webp" alt="Property Improvements Exterior house painted before after, Doncaster">
 <h3 class="fade-child">Transform Your Homes Exterior</h3>
 <p class="fade-child">We prep, prime, and paint your homes exterior with attention to detail. Every surface protected, every line clean - a finish that looks great and lasts for years!</p>
-<a href="https://homerepairs4u.com/local/property-improvements.html" class="card-btn fade-child">Get Quote</a>
+<a href="https://homerepairs4u.com/local/exterior-painting.html" class="card-btn fade-child">Exterior Painting</a>
+<p class="fade-child">View our exterior painting page.</p>
 </div>
 
 <!-- Card 4 -->
@@ -422,7 +423,8 @@ opacity: 0;
 <img class="fade-child" src="/images/ivy-removal.webp" alt="Ivy completely removed from your property, Doncaster">
 <h3 class="fade-child">Ivy Removed Safely and Permanently</h3>
 <p class="fade-child">Overgrown ivy can damage brickwork, gutters, and roofing if left unchecked. We remove ivy carefully and thoroughly, preventing further damage while keeping your property clean and protected. No tearing, no mess — just ivy removed the right way.</p>
-<a href="https://homerepairs4u.com/local/general-repairs.html" class="card-btn fade-child">Get Quote</a>
+<a href="https://homerepairs4u.com/local/ivy-removal.html" class="card-btn fade-child">Ivy Removal</a>
+<p class="fade-child">View our ivy control page.</p>
 </div>
 
 <!-- Card 5 -->
@@ -430,7 +432,8 @@ opacity: 0;
 <img class="fade-child" src="/images/gutter-service.webp" alt="Gate clearing, cleaning, repairs and replacement - Doncaster">
 <h3 class="fade-child">Gutters Cleared, Cleaned, Repaired or Replaced.</h3>
 <p class="fade-child">Blocked or damaged gutters can lead to leaks and damp if left unchecked. We clear, clean, repair, or replace guttering properly, ensuring rainwater flows away from your property as it should. No shortcuts — just reliable guttering done right.</p>
-<a href="https://homerepairs4u.com/local/gate-installation.html" class="card-btn fade-child">Get Quote</a>
+<a href="https://homerepairs4u.com/local/gutter-services.html" class="card-btn fade-child">Gutter services</a>
+<p class="fade-child">View our gutter services page.</p>
 </div>
 
 <!-- Card 6 -->
@@ -438,7 +441,8 @@ opacity: 0;
 <img class="fade-child" src="/images/pressure-washing-driveways.webp" alt="Pressure washing driveways, patios, decking, Doncaster">
 <h3 class="fade-child">Pressure Washing Remove Moss and Grime.</h3>
 <p class="fade-child">We professionally clean driveways, patios, and paths to remove dirt, algae, and staining. Using the correct pressure for each surface, we restore a clean, safe finish without causing damage. Proper cleaning, long-lasting results.</p>
-<a href="https://homerepairs4u.com/local/flat-roof.html" class="card-btn fade-child">Get Quote</a>
+<a href="https://homerepairs4u.com/local/pressure-washing.html" class="card-btn fade-child">Pressure Washing</a>
+<p class="fade-child">View our pressure washing page.</p>
 </div>
 
 <!-- Card 7 -->
@@ -446,7 +450,8 @@ opacity: 0;
 <img class="fade-child" src="/images/windows-boarded.webp" alt="Windows boarded up emergency service, Doncaster">
 <h3 class="fade-child">Emergency Window Boarding Up.</h3>
 <p class="fade-child">We provide fast, secure window boarding to protect your property after damage or break-ins. Strong materials fitted properly to keep your home or business safe until permanent repairs are carried out.</p>
-<a href="https://homerepairs4u.com/local/sheds-outbuildings.html" class="card-btn fade-child">Get Quote</a>
+<a href="https://homerepairs4u.com/local/window-boarding.html" class="card-btn fade-child">Window Boarding</a>
+<p class="fade-child">View our security window boarding page.</p>
 </div>
 
 <!-- Card 8 -->
@@ -454,14 +459,15 @@ opacity: 0;
 <img class="fade-child" src="/images/decking.webp" alt="Decking & Timber">
 <h3 class="fade-child">Decking Installed and Repaired</h3>
 <p class="fade-child">We install and repair timber decking built to last. From solid foundations to a clean, level finish, every deck is fitted properly for strength, safety, and long-term durability.</p>
-<a href="https://homerepairs4u.com/local/decking-timber.html" class="card-btn fade-child">Get Quote</a>
+<a href="https://homerepairs4u.com/local/decking-istallation.html" class="card-btn fade-child">Decking Installation</a>
+<p class="fade-child">View our decking installation page.</p>
 </div>
 
 <!-- Card 9 -->
 <div class="card fade">
 <h3 class="fade-child">Reliable Property Repairs You Can Trust.</h3>
 <p class="fade-child">From small repairs to urgent issues, we take pride in doing every job properly. Fair pricing, honest advice, and work completed to a high standard — that’s the HomeRepairs4U promise.</p>
-<a href="https://homerepairs4u.com/local/emergency-repairs.html" class="card-btn fade-child">Get Quote</a>
+<a href="https://homerepairs4u.com/local/contact.html" class="card-btn fade-child">Contact</a>
 </div>
 
 </div>
