--- a/local/test2.html
+++ b/local/test2.html
@@ -318,6 +318,23 @@ opacity: 1;
 #action-word.fade-out {
 opacity: 0;
 }
+.menu-toggle {
+background: none;
+border: none;
+padding: 0;
+margin: 0;
+font: inherit;
+color: white;
+cursor: pointer;
+font-size: 1.8rem;
+line-height: 1;
+}
+
+/* Optional: nice accessible focus */
+.menu-toggle:focus {
+outline: 2px solid var(--accent);
+outline-offset: 4px;
+}
 </style>
 </head>
 <body>
