--- a/local/test2.html
+++ b/local/test2.html
@@ -521,12 +521,23 @@ btn.textContent = parent.classList.contains("show") ? "Read Less ▲" : "Read Mo
 });
 });
 
-// Hamburger toggle
-const toggle = document.querySelector('.menu-toggle');
-const menu = document.querySelector('nav ul.menu');
-toggle.addEventListener('click', () => {
-menu.classList.toggle('show');
-});
+.menu-toggle {
+background: none;
+border: none;
+padding: 0;
+margin: 0;
+font: inherit;
+color: white;
+cursor: pointer;
+font-size: 1.8rem;
+line-height: 1;
+}
+
+/* Optional: nice accessible focus */
+.menu-toggle:focus {
+outline: 2px solid var(--accent);
+outline-offset: 4px;
+}
 });
 </script>
 <script type="application/ld+json">
